i am done profile with demo and all demo also

--- a/src/app/styles/Header.css
+++ b/src/app/styles/Header.css
@@ -12,7 +12,10 @@
     flex: 1;
     text-align: center;
   }
-
+ .heading{
+  font-size: 30px;
+  align-items: center;
+ }
 
   header {
     display: flex;
