--- a/src/app/styles/AllDemo.css
+++ b/src/app/styles/AllDemo.css
@@ -16,7 +16,7 @@
 
 
 .listData {
-    /* display: none; */
+    display: none;
     padding-top: 0px;
     margin-top: 0px;
     width: 50vw;
@@ -50,7 +50,7 @@
 
 .dropdown span::after {
     content: "-";
-    font-size: 100px;
+    font-size: 60px;
     height: 10px;
 }
 
