--- a/src/app/styles/Demo.css
+++ b/src/app/styles/Demo.css
@@ -1,8 +1,9 @@
 .container {
-    margin: 20px;
+    padding: 10px;
+    height: 100vh;
   }
   
-  .navbar {
+  /* .navbar {
     background-color: #333;
     color: white;
   }
@@ -10,7 +11,7 @@
   .navbar a {
     color: white;
     text-decoration: none;
-  }
+  } */
   
   #login {
     margin-top: 20px;
