--- a/src/app/styles/AllDemo.css
+++ b/src/app/styles/AllDemo.css
@@ -1,71 +1,133 @@
-.dropdown {
+/* .dropdown {
     display: flex;
     background-color: black;
-    width: 50vw;
-    font-size: xx-large;
-    height: 50px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+    width: 100%;
+    font-size: 24px;
+   
+    height: 80px;
+    margin-bottom: 0;
+    padding-bottom: 0;
     border: 0px black solid;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     color: white;
     cursor: pointer;
-    justify-content: right;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 10px;
+    
 }
-
 
 .listData {
-    /* display: none; */
-    padding-top: 0px;
-    margin-top: 0px;
-    width: 50vw;
+    display: none;
+    padding-top: 0;
+    margin-top: 0;
+    width: 100%;
     background-color: blue;
-    -webkit-transition: height 2s ease, height 2s ease;
-    -moz-transition: height 2s ease, height 2s ease;
-    -o-transition: height 2s ease, height 2s ease;
-    transition: height 2s ease, height 2s ease;
-}
-
-.listData :hover {
-    height: 50vh;
-
-    /* display: none; */
-
+    justify-content: space-between;
+    align-items: center;
 }
 
 .dropdown.active .listData {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.dropdown.active span::after {
-    content: "+";
-    font-size: 90px;
-    height: 10px;
-
-
 }
 
 .dropdown span::after {
+    content: "+";
+    font-size: 40px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+
+.dropdown.active span::after {
     content: "-";
-    font-size: 100px;
-    height: 10px;
 }
 
 .data {
     display: flex;
     flex-direction: row;
+    padding: 10px;
 }
 
 .data a {
-    padding: 30px;
     text-decoration: none;
     color: white;
+    padding: 10px;
+    margin: 5px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding-left: 20px;
+    
+    font-size: 20px;
+}
 
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.button {
+    background-color: green;
+    color: white;
+    padding: 10px;
+    margin: 5px;
+    text-decoration: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: darkgreen;
 }
 
 .dropdown.active {
-    height: 100px;
+    height: 150px;
+} */
+.toggleButton
+{
+    border: 1px solid black;
+    background-color: aqua;
+    float: right;
+  
+    
+}
+/* styles.css */
+
+/* .data {
+    display: none;
+    margin-top: 10px;
+}
+
+.data td {
+    padding: 5px;
+}
+
+.actions {
+    margin-top: 10px;
+}
+
+.button {
+    margin-right: 10px;
+    text-decoration: none;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    color: #333;
+    cursor: pointer;
+    display: inline-block;
+} */
+.toggleData
+{
+    display: flex;
+    padding-top: 25px;
+}
+.data
+{
+border: 1px solid;
 }
