--- a/src/app/styles/Header.css
+++ b/src/app/styles/Header.css
@@ -1,79 +1,81 @@
-
 .logo img {
-    /* padding: 10px; */
-    width: 100px;
-    height: auto;
-  }
-  /*
+  /* padding: 10px; */
+  width: 100px;
+  height: auto;
+}
+
+/*
   <img alt="PD Logo" srcset="/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Fpdlightthemebluetext.7167543f.png&w=1920&q=75 1x, /_next/image?url=%2F_next%2Fstatic%2Fmedia%2Fpdlightthemebluetext.7167543f.png&w=3840&q=75 2x" src="/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Fpdlightthemebluetext.7167543f.png&w=3840&q=75" decoding="async" data-nimg="intrinsic" style="">
   */
 
-  .header-content {
-    flex: 1;
-    text-align: center;
-  }
- .heading{
+.header-content {
+  flex: 1;
+  text-align: center;
+}
+
+.heading {
   font-size: 30px;
   align-items: center;
- }
+}
 
-  header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #24262b;
-    color: white;
-    padding: 15px;
-    /* border: 3px solid rgb(16, 15, 15); */
-    
-  }
-  
-  .search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
-  }
-  
-  .srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid #fdfbfa;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-  }
-  
-  .btn{
-    width: 100px;
-    height: 40px;
-    background: #ff7200;
-    border: 2px solid #fdfbfa;
-    margin-top: 13px;
-    color: #fff;
-    font-size: 15px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    transition: 0.2s ease;
-    cursor: pointer;
-  }
-  .btn:hover{
-    color: #000;
-  }
-  
-  .btn:focus{
-    outline: none;
-  }
-  
-  .srch:focus{
-    outline: none;
-  }
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #24262b;
+  color: white;
+  padding: 15px;
+  /* border: 3px solid rgb(16, 15, 15); */
+
+}
+
+.search {
+  width: 330px;
+  float: left;
+  margin-left: 270px;
+}
+
+.srch {
+  font-family: 'Times New Roman';
+  width: 200px;
+  height: 40px;
+  background: transparent;
+  border: 2px solid #fdfbfa;
+  margin-top: 13px;
+  color: #fff;
+  border-right: none;
+  font-size: 16px;
+  float: left;
+  padding: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+.btn {
+  width: 100px;
+  height: 40px;
+  background: #ff7200;
+  border: 2px solid #fdfbfa;
+  margin-top: 13px;
+  color: #fff;
+  font-size: 15px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  transition: 0.2s ease;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: #000;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.srch:focus {
+  outline: none;
+}
 
 /* home css */
 
@@ -82,37 +84,41 @@
   width: 100px;
   height: auto;
 }
-.navbar{
-  background-color: #333; /* Background color for the navigation bar */
+
+.navbar {
+  background-color: #333;
+  /* Background color for the navigation bar */
   display: flex;
-  justify-content: space-between; /* Place logo and menu at the extremes */
+  justify-content: space-between;
+  /* Place logo and menu at the extremes */
   align-items: center;
-    padding: 8px; 
+  padding: 8px;
 }
 
 .menu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .menu ul li {
-    display: inline;
-   margin-right: 15px;
+  display: inline;
+  margin-right: 15px;
 }
 
 .menu a {
-    text-decoration: none;
-    color: white;
-    text-align: right;
-    font-weight: bold;
+  text-decoration: none;
+  color: white;
+  text-align: right;
+  font-weight: bold;
 }
+
 .menu a:hover {
   /* text-decoration: underline; */
   color: #ff7200;
 }
 
-   
+
 /* css for login and logout button */
 .menu .login-btn,
 .menu .logout-btn {
@@ -124,6 +130,11 @@
 
 .menu .login-btn:hover,
 .menu .logout-btn:hover {
-  background-color:#ff7200;
+  background-color: #ff7200;
   color: #333;
+}
+
+.image-container {
+  height: 50px;
+  width: 200px;
 }
