--- a/src/app/styles/Header.css
+++ b/src/app/styles/Header.css
@@ -24,7 +24,8 @@ header {
   justify-content: space-between;
   background-color: #24262b;
   color: white;
-  padding: 15px;
+  padding: 8px;
+  height: 80px;
   /* border: 3px solid rgb(16, 15, 15); */
 
 }
